# eclipse.platform.swt

./: .gitattributes  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING  CONTRIBUTING.md  Jenkinsfile  NOTICE  README.md  README_original.md  pom.xml  prepareNextDevCycle.sh
.github/: aggregator.pom  dependabot.yml  matcher.json  toolchains.xml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: GTK.instructions.md
.github/workflows/: build.yml  copilot-setup-steps.yml  gtk4.yml  junit.yml  maven.yml  pr-checks.yml  updateRelease.yml  version-increments.yml
binaries/: .classpath_cocoa  .classpath_gtk  .classpath_swing  .classpath_win32  build.xml  pom.xml
binaries/binaries-parent/: build.xml  pom.xml
binaries/org.eclipse.swt.cocoa.macosx.aarch64/: .project  build.properties  (+175 more)
bundles/: build.properties
bundles/org.eclipse.swt.browser.chromium/common/rust-library/chromium_subp/: .project  Cargo.toml  build.rs  cef.h
bundles/org.eclipse.swt.browser.chromium/common/rust-library/chromium_subp/.cargo/: config
bundles/org.eclipse.swt.browser.chromium/common/rust-library/chromium_subp/src/: lib.rs  socket.rs  utils.rs
bundles/org.eclipse.swt.browser.chromium/common/rust-library/chromium_subp/src/app/: mod.rs
bundles/org.eclipse.swt.browser.chromium/common/rust-library/chromium_subp/src/cef/: linux.rs  mac.rs  mod.rs  win.rs
container/: Dockerfile
docs/: .project  GTK4_DEPRECATION_STATUS.md  HiDPI Support for Windows.md  gtk-dev-guide.md  hidpi-support-for-windows-dev-guide.md  hidpi-support.md
tests/: build.properties
(+9864 files in other folders)
